[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/title_screen.gd" type="Script" id=1]
[ext_resource path="res://fonts/RobGraves.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://images/family.png" type="Texture" id=3]
[ext_resource path="res://scenes/template_scenes/scene_change_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/rayando.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://sounds/OpeningTheme-by-KimLightyear.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=3]
resource_name = "begin"
tracks/0/type = "value"
tracks/0/path = NodePath("cover:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="title_screen" type="Node"]
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
margin_right = 666.0
margin_bottom = 666.0

[node name="title" type="Label" parent="."]
margin_right = 666.0
margin_bottom = 183.0
custom_fonts/font = SubResource( 1 )
text = "Daddy's Apple Farm"
align = 1
valign = 1
autowrap = true

[node name="images" type="Control" parent="."]
margin_right = 666.0
margin_bottom = 666.0
__meta__ = {
"_edit_lock_": true
}

[node name="family" type="TextureRect" parent="images"]
margin_left = 174.0
margin_top = 282.0
margin_right = 486.0
margin_bottom = 510.0
texture = ExtResource( 3 )
expand = true

[node name="buttons" type="HBoxContainer" parent="."]
margin_top = 544.0
margin_right = 662.0
margin_bottom = 586.0
custom_constants/separation = 24
alignment = 1

[node name="play" parent="buttons" instance=ExtResource( 4 )]
margin_left = 154.0
margin_right = 248.0
text = "play"
scene_path = "res://scenes/placeholder_scene.tscn"

[node name="about" parent="buttons" instance=ExtResource( 4 )]
margin_left = 272.0
margin_right = 394.0
text = "about"
scene_path = "res://scenes/about.tscn"

[node name="quit" type="Button" parent="buttons"]
margin_left = 418.0
margin_right = 507.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "quit"
flat = true

[node name="cover" type="ColorRect" parent="."]
margin_right = 667.0
margin_bottom = 668.0
color = Color( 0, 0, 0, 1 )

[node name="ani_player" type="AnimationPlayer" parent="."]
anims/begin = SubResource( 3 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -30.0
autoplay = true
[connection signal="pressed" from="buttons/quit" to="." method="_on_quit_pressed"]
[connection signal="animation_finished" from="ani_player" to="." method="_on_ani_player_animation_finished"]
